feat: add new normalization rules for structured dates, author initials, volume/issue numbers, page range overlap, and container title variants

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -878,6 +878,26 @@
   "setting-normalize-urls-description": "URLs für konsistenten Vergleich normalisieren durch Entfernen von Fragmenten, Standardisierung von Parametern und Bereinigung von Tracking-Daten",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "URL-Format standardisieren",
+  "setting-match-structured-dates": "Strukturierte Datumsabgleiche",
+  "setting-match-structured-dates-description": "Vergleicht normalisierte Jahres-, Monats- und Tagesangaben und erlaubt eine Toleranz von ±1 Jahr bei kleineren Abweichungen.",
+  "setting-match-structured-dates-example": "\"2020-03-15\" entspricht \"März 2020\"",
+  "setting-match-structured-dates-short-description": "Datumskomponenten abgleichen",
+  "setting-match-author-initials": "Autor:innen über Initialen abgleichen",
+  "setting-match-author-initials-description": "Vergleicht Namen anhand identischer Nachnamen und überlappender Initialen, auch wenn ausgeschriebene Vornamen variieren.",
+  "setting-match-author-initials-example": "\"Müller, A. B.\" entspricht \"Muller, Anna\"",
+  "setting-match-author-initials-short-description": "Nachname + Initialen nutzen",
+  "setting-match-volume-issue-numeric": "Band-/Heftnummern erkennen",
+  "setting-match-volume-issue-numeric-description": "Extrahiert Zahlen aus Angaben wie \"Vol. 12 (Issue 3)\", damit kombinierte Felder isolierte Nummern abgleichen.",
+  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" entspricht Band \"12\"",
+  "setting-match-volume-issue-numeric-short-description": "Eingebettete Zahlen erkennen",
+  "setting-match-page-range-overlap": "Seitenbereichs-Überlappung",
+  "setting-match-page-range-overlap-description": "Behandelt sich überschneidende Bereiche und einzelne Seiten innerhalb eines Bereichs als Treffer und vergleicht Bereiche anhand ihrer Schnittmenge.",
+  "setting-match-page-range-overlap-example": "\"123-125\" entspricht \"124\"",
+  "setting-match-page-range-overlap-short-description": "Überlappende Seiten erlauben",
+  "setting-match-container-title-variants": "Variantentitel für Container",
+  "setting-match-container-title-variants-description": "Ignoriert Klammern mit reinen Akronymen oder nachgestellte Abkürzungen beim Vergleich von Zeitschriften- oder Buchtiteln.",
+  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" entspricht \"Journal of Testing\"",
+  "setting-match-container-title-variants-short-description": "Acronym-Zusätze ignorieren",
   "setting-normalize-whitespace": "Leerzeichen normalisieren",
   "setting-normalize-whitespace-description": "Leerzeichen normalisieren durch Entfernen doppelter Leerzeichen, führender/nachfolgender Leerzeichen, unnötiger Tabs und weicher Zeilenumbrüche",
   "setting-normalize-whitespace-example": "\"Das    ist ein  Test.\" → \"Das ist ein Test.\"",
