--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -878,6 +878,26 @@
   "setting-normalize-urls-description": "Normalize URLs for consistent comparison by removing fragments, standardizing parameters, and cleaning tracking data",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "Standardize URL format",
+  "setting-match-structured-dates": "Structured date comparison",
+  "setting-match-structured-dates-description": "Compare normalized year, month, and day components and allow a ±1 year tolerance for minor discrepancies.",
+  "setting-match-structured-dates-example": "\"2020-03-15\" matches \"March 2020\"",
+  "setting-match-structured-dates-short-description": "Match date components",
+  "setting-match-author-initials": "Author initials matching",
+  "setting-match-author-initials-description": "Match creators when family names agree and initials overlap, even if full given names differ.",
+  "setting-match-author-initials-example": "\"Müller, A. B.\" matches \"Muller, Anna\"",
+  "setting-match-author-initials-short-description": "Use family + initials",
+  "setting-match-volume-issue-numeric": "Volume/issue number extraction",
+  "setting-match-volume-issue-numeric-description": "Detect numeric tokens inside labels like \"Vol. 12 (Issue 3)\" so combined fields still match isolated numbers.",
+  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" matches volume \"12\"",
+  "setting-match-volume-issue-numeric-short-description": "Detect embedded numbers",
+  "setting-match-page-range-overlap": "Page range overlap",
+  "setting-match-page-range-overlap-description": "Treat overlapping ranges and single pages inside a range as matches and compare ranges by their intersection.",
+  "setting-match-page-range-overlap-example": "\"123-125\" matches \"124\"",
+  "setting-match-page-range-overlap-short-description": "Allow overlapping pages",
+  "setting-match-container-title-variants": "Container title variants",
+  "setting-match-container-title-variants-description": "Ignore acronym-only parentheses or trailing abbreviations when comparing journal or book titles.",
+  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" matches \"Journal of Testing\"",
+  "setting-match-container-title-variants-short-description": "Ignore acronym add-ons",
   "setting-normalize-whitespace": "Normalize Whitespace",
   "setting-normalize-whitespace-description": "Normalize whitespace by removing duplicated spaces, leading/trailing spaces, unnecessary tabs, and soft line breaks",
   "setting-normalize-whitespace-example": "\"This    is a  test.\" → \"This is a test.\"",
