--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -973,7 +973,7 @@
   "title": "Titel",
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
-  "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben. Ihre Korrekturen helfen dabei, das Parser-Modell für alle zu verbessern.",
+  "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben.",
   "token-editor-help-title": "So verwenden Sie den Token-Editor",
   "token-relabeling": {
     "changeLabelFor": "Label ändern für",
