feat: Add documentation links and update help section for better user guidance

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1130,6 +1130,8 @@
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "version": "Version",
   "view-demo": "Demo ansehen",
+  "documentation": "Dokumentation",
+  "view-docs": "Dokumentation öffnen",
   "visit-website": "Webseite besuchen",
   "volume": "Band",
   "volume-match": "Band-Übereinstimmung",
