feat(TokenEditor): update label options for localization and improve token selection UI

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -215,7 +215,7 @@
   "early-termination-threshold-high": "Sehr streng (99%)",
   "early-termination-threshold-low": "Weniger streng (50%)",
   "early-termination-title": "Frühzeitige Beendigung",
-  "edit": "",
+  "edit": "Bearbeiten",
   "edition": "Auflage",
   "editor": "Herausgeber",
   "editorial-director": "Verlagsleiter",
@@ -975,6 +975,32 @@
   "title-short": "Titel (Kurz)",
   "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben.",
   "token-editor-help-title": "So verwenden Sie den Token-Editor",
+  "token-editor-select-new-label": "Neues Label auswählen",
+  "token-editor-search-labels-placeholder": "Tippe, um Labels zu durchsuchen...",
+  "token-label-author": "Autor",
+  "token-label-citation-number": "Zitiernummer",
+  "token-label-collection-title": "Sammlungstitel",
+  "token-label-container-title": "Container-Titel",
+  "token-label-date": "Datum",
+  "token-label-director": "Regisseur",
+  "token-label-doi": "DOI",
+  "token-label-edition": "Auflage",
+  "token-label-editor": "Herausgeber",
+  "token-label-genre": "Genre",
+  "token-label-isbn": "ISBN",
+  "token-label-journal": "Zeitschrift",
+  "token-label-location": "Ort",
+  "token-label-medium": "Medium",
+  "token-label-note": "Notiz",
+  "token-label-other": "Sonstiges",
+  "token-label-pages": "Seiten",
+  "token-label-producer": "Produzent",
+  "token-label-publisher": "Verlag",
+  "token-label-source": "Quelle",
+  "token-label-title": "Titel",
+  "token-label-translator": "Übersetzer",
+  "token-label-url": "URL",
+  "token-label-volume": "Band / Ausgabe",
   "token-relabeling": {
     "changeLabelFor": "Label ändern für",
     "changesCount": "Vorgenommene Änderungen",
