--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -975,6 +975,32 @@
   "title-short": "Title (Short)",
   "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results.",
   "token-editor-help-title": "How to Use the Token Editor",
+  "token-editor-select-new-label": "Select new label",
+  "token-editor-search-labels-placeholder": "Type to search labels...",
+  "token-label-author": "Author",
+  "token-label-citation-number": "Citation Number",
+  "token-label-collection-title": "Collection Title",
+  "token-label-container-title": "Container Title",
+  "token-label-date": "Date",
+  "token-label-director": "Director",
+  "token-label-doi": "DOI",
+  "token-label-edition": "Edition",
+  "token-label-editor": "Editor",
+  "token-label-genre": "Genre",
+  "token-label-isbn": "ISBN",
+  "token-label-journal": "Journal",
+  "token-label-location": "Location",
+  "token-label-medium": "Medium",
+  "token-label-note": "Note",
+  "token-label-other": "Other",
+  "token-label-pages": "Pages",
+  "token-label-producer": "Producer",
+  "token-label-publisher": "Publisher",
+  "token-label-source": "Source",
+  "token-label-title": "Title",
+  "token-label-translator": "Translator",
+  "token-label-url": "URL",
+  "token-label-volume": "Volume / Issue",
   "token-relabeling": {
     "changeLabelFor": "Change label for",
     "changesCount": "Changes Made",
