fix(ReferenceMetadataList): add source type translation logic and update metadata display

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1080,6 +1080,51 @@
   "tooltip-series": "Publication series name (e.g. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
   "tooltip-series-number": "Number within a publication series (e.g. '1234', 'Vol. 15')",
   "tooltip-seriesNumber": "Series number within a series",
+  "source-type-article": "Article",
+  "source-type-article-journal": "Journal Article",
+  "source-type-article-magazine": "Magazine Article",
+  "source-type-article-newspaper": "Newspaper Article",
+  "source-type-bill": "Bill",
+  "source-type-book": "Book",
+  "source-type-broadcast": "Broadcast",
+  "source-type-chapter": "Book Chapter",
+  "source-type-classic": "Classic Work",
+  "source-type-collection": "Collection",
+  "source-type-dataset": "Dataset",
+  "source-type-document": "Document",
+  "source-type-entry": "Entry",
+  "source-type-entry-dictionary": "Dictionary Entry",
+  "source-type-entry-encyclopedia": "Encyclopedia Entry",
+  "source-type-event": "Event",
+  "source-type-figure": "Figure",
+  "source-type-graphic": "Graphic",
+  "source-type-hearing": "Hearing",
+  "source-type-interview": "Interview",
+  "source-type-legal_case": "Legal Case",
+  "source-type-legislation": "Legislation",
+  "source-type-manuscript": "Manuscript",
+  "source-type-map": "Map",
+  "source-type-motion_picture": "Motion Picture",
+  "source-type-musical_score": "Musical Score",
+  "source-type-pamphlet": "Pamphlet",
+  "source-type-paper-conference": "Conference Paper",
+  "source-type-patent": "Patent",
+  "source-type-performance": "Performance",
+  "source-type-periodical": "Periodical",
+  "source-type-personal_communication": "Personal Communication",
+  "source-type-post": "Post",
+  "source-type-post-weblog": "Blog Post",
+  "source-type-regulation": "Regulation",
+  "source-type-report": "Report",
+  "source-type-review": "Review",
+  "source-type-review-book": "Book Review",
+  "source-type-software": "Software",
+  "source-type-song": "Song",
+  "source-type-speech": "Speech",
+  "source-type-standard": "Standard",
+  "source-type-thesis": "Thesis",
+  "source-type-treaty": "Treaty",
+  "source-type-webpage": "Webpage",
   "tooltip-sourceType": "Type of source (e.g. 'journal-article', 'book', 'thesis', 'conference-paper')",
   "tooltip-subjects": "Academic subjects or disciplines covered (e.g. 'Computer Science', 'Medicine')",
   "tooltip-submitted": "Date when the manuscript was submitted (e.g. '2024-01-15')",
