--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1080,6 +1080,51 @@
   "tooltip-series": "Name der Publikationsreihe (z.B. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
   "tooltip-series-number": "Nummer innerhalb einer Publikationsreihe (z.B. '1234', 'Vol. 15')",
   "tooltip-seriesNumber": "Seriennummer innerhalb einer Serie",
+  "source-type-article": "Artikel",
+  "source-type-article-journal": "Zeitschriftenartikel",
+  "source-type-article-magazine": "Magazinartikel",
+  "source-type-article-newspaper": "Zeitungsartikel",
+  "source-type-bill": "Gesetzesentwurf",
+  "source-type-book": "Buch",
+  "source-type-broadcast": "Sendung",
+  "source-type-chapter": "Buchkapitel",
+  "source-type-classic": "Klassisches Werk",
+  "source-type-collection": "Sammlung",
+  "source-type-dataset": "Datensatz",
+  "source-type-document": "Dokument",
+  "source-type-entry": "Eintrag",
+  "source-type-entry-dictionary": "Wörterbucheintrag",
+  "source-type-entry-encyclopedia": "Enzyklopädieeintrag",
+  "source-type-event": "Veranstaltung",
+  "source-type-figure": "Abbildung",
+  "source-type-graphic": "Grafik",
+  "source-type-hearing": "Anhörung",
+  "source-type-interview": "Interview",
+  "source-type-legal_case": "Gerichtsfall",
+  "source-type-legislation": "Gesetzgebung",
+  "source-type-manuscript": "Manuskript",
+  "source-type-map": "Karte",
+  "source-type-motion_picture": "Film",
+  "source-type-musical_score": "Partitur",
+  "source-type-pamphlet": "Broschüre",
+  "source-type-paper-conference": "Konferenzbeitrag",
+  "source-type-patent": "Patent",
+  "source-type-performance": "Aufführung",
+  "source-type-periodical": "Periodikum",
+  "source-type-personal_communication": "Persönliche Kommunikation",
+  "source-type-post": "Beitrag",
+  "source-type-post-weblog": "Blogbeitrag",
+  "source-type-regulation": "Verordnung",
+  "source-type-report": "Bericht",
+  "source-type-review": "Rezension",
+  "source-type-review-book": "Buchrezension",
+  "source-type-software": "Software",
+  "source-type-song": "Lied",
+  "source-type-speech": "Rede",
+  "source-type-standard": "Norm",
+  "source-type-thesis": "Dissertation",
+  "source-type-treaty": "Vertrag",
+  "source-type-webpage": "Webseite",
   "tooltip-sourceType": "Art der Quelle (z.B. 'journal-article', 'book', 'thesis', 'conference-paper')",
   "tooltip-subjects": "Akademische Fachbereiche oder Disziplinen (z.B. 'Computer Science', 'Medicine')",
   "tooltip-submitted": "Datum, an dem das Manuskript eingereicht wurde (z.B. '2024-01-15')",
