feat(Verification): implement cancellation logic for verification process and enhance error handling

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -236,13 +236,19 @@
     "forbidden": "You do not have permission to perform this action.",
     "handler": "Error in the error handler.",
     "internal": "Internal server error. Please try again later.",
+    "matching_failed": "Matching failed. Please try again.",
+    "network": "Network error. Please check your connection.",
+    "no_databases_enabled": "No databases are enabled. Please enable at least one database in Settings.",
     "not_found": "The requested resource was not found.",
     "rate_limited": "Too many requests. Please wait a moment and try again.",
+    "search_failed": "Search failed. Please try again.",
     "unauthorized": "Your API key is missing or invalid. Please check your settings.",
+    "unexpected_response": "Unexpected response from the server.",
     "unknown": "An unknown error has occurred.",
     "unprocessable": "The request could not be processed.",
     "upstream": "The external service is currently unavailable. Please try again later.",
-    "validation_error": "Invalid input: {message}"
+    "validation_error": "Invalid input: {message}",
+    "verification_failed": "Verification failed. Please try again."
   },
   "event": "Event",
   "event-date": "Event Date",
