--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -236,13 +236,19 @@
     "forbidden": "Du hast keine Berechtigung, diese Aktion auszuführen.",
     "handler": "Fehler im Fehler-Handler.",
     "internal": "Interner Serverfehler. Bitte später erneut versuchen.",
+    "matching_failed": "Abgleich fehlgeschlagen. Bitte erneut versuchen.",
+    "network": "Netzwerkfehler. Bitte Verbindung prüfen.",
+    "no_databases_enabled": "Keine Datenbanken aktiviert. Bitte mindestens eine Datenbank in den Einstellungen aktivieren.",
     "not_found": "Die angeforderte Ressource wurde nicht gefunden.",
     "rate_limited": "Zu viele Anfragen. Bitte kurz warten und erneut versuchen.",
+    "search_failed": "Suche fehlgeschlagen. Bitte erneut versuchen.",
     "unauthorized": "Dein API-Key ist ungültig oder fehlt. Bitte prüfe die Einstellungen.",
+    "unexpected_response": "Unerwartete Serverantwort.",
     "unknown": "Es ist ein unbekannter Fehler aufgetreten.",
     "unprocessable": "Die Anfrage konnte nicht verarbeitet werden.",
     "upstream": "Der externe Dienst ist momentan nicht erreichbar. Bitte später noch einmal probieren.",
-    "validation_error": "Ungültige Eingabe: {message}"
+    "validation_error": "Ungültige Eingabe: {message}",
+    "verification_failed": "Verifizierung fehlgeschlagen. Bitte erneut versuchen."
   },
   "event": "Ereignis",
   "event-date": "Ereignisdatum",
